--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Carpetas
+build/
+dist/
+
 # Compiled class file
 *.class
 
@@ -11,7 +15,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -21,3 +24,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/build/
